--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,16 +4,8 @@
 
 @import 'variables/*.scss';
 
-/* ================================================== *\
-	Modules
-\* ================================================== */
-
-@import 'modules/reset';
-@import 'modules/base';
-@import 'modules/page-wrapper';
-@import 'modules/container';
-@import 'modules/main';
-@import 'modules/header';
-@import 'modules/footer';
-@import 'modules/card';
-@import 'modules/btn';
+*{
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
