add header and cards section

--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -2,3 +2,15 @@
 	Variables
 \* ================================================== */
 
+// FONT COLORT
+$fc-white: hsla(0, 0%, 100%, 100%);
+$fc-gray: hsla(60, 1%, 19.8%, 100%);
+
+// FONT FAMILY
+$ff-title: 'Norican', cursive;
+
+//BACKGROUND
+$bcg-white: hsla(0, 0%, 100%, 100%);
+
+//GRADIENT
+$vertical-gradient: linear-gradient(to right, #dd813d, #415299);
