--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,9 +3,174 @@
 \* ================================================== */
 
 @import 'variables/*.scss';
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Norican&subset=latin-ext');
 
 *{
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+	font-family: 'Lato', sans-serif;
+}
+
+// HEADER
+
+header{
+	width: 100%;
+	height: 900px;
+	.header__background{
+		background-image: url(/images/banner.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: 50% 100%;
+		min-height: 820px;
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+	}
+}
+
+.nav{
+	width: 100%;
+	height: 6.25rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: $fc-white;
+	padding: 0 6.3rem;
+	position: absolute;
+	top: 0;
+	&__logo{
+		font-size: 60px;
+		letter-spacing: -4px;
+		.dot{
+			color: #fba419;
+		}
+	}
+	&__item{
+		ul{
+			display: flex;
+			li{
+				list-style: none;
+				margin-right: 20px;
+				a{
+					text-decoration: none;
+					color: $fc-white;
+					font-size: .9375rem;
+					text-transform: uppercase;
+				}
+			}
+		}
+	}
+}
+
+.container{
+	width: 1170px;
+}
+.header{
+	.container-header{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+	&__title{
+		color: $fc-white;
+		font-size: 4.875rem;
+		text-align: center;
+		h1{
+			font-family: $ff-title;
+		}
+	}
+
+	&__subtitle{
+		color:$fc-white;
+		font-size: 1.612rem;
+		text-align: center;
+		margin-bottom: 50px;
+	}
+	&__description{
+		color: $fc-white;
+		font-size: 1rem;
+		text-align: center;
+		width: 630px;
+	}
+	&__btn{
+		margin-top: 50px;
+		#btn-read-more{
+			width: 8.75em;
+			height: 2.5em;
+			border-radius: 1rem;
+			border: none;
+			background-color: $bcg-white;
+			text-transform: uppercase;
+			font-weight: 900;
+			cursor: pointer;
+			margin-bottom: 100px;
+		}
+	}
+}
+
+// CARDS BELOW HEADER
+.cards{
+	width: 100%;
+	height: 27.5em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	bottom: -130px;
+	.container-cards{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+	&__item{
+		height: 410px;
+		width: 370px;
+		border-radius: 1em;
+		background-color: $bcg-white;
+		overflow: hidden;
+		box-shadow: 0px 0px 20px 0px rgba(145, 145, 145, 0.7);
+		img{
+			width: 100%;
+		}
+	}
+	&__text{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		height: 188px;
+		padding: 0 4.7em;
+		text-align: center;
+		color: $fc-gray;
+
+		h1{
+			margin-top: -15px;
+			font-size: 1.5628rem;
+			margin-bottom: .7em;
+		}
+		p{
+			font-size: 1rem;
+			margin-bottom: 1.3em;
+		}
+		input{
+			position: absolute;
+			bottom: 0;
+			width: 145px;
+			height: 40px;
+			border-radius: 2em;
+			border: none;
+			text-transform: uppercase;
+			color: $fc-white;
+			font-weight: 800;
+			font-size: 1rem;
+			background-image: $vertical-gradient;
+			cursor: pointer;
+		}
+	}
 }
