Add fixed color to btn

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -207,6 +207,7 @@ header{
 .btn--white{
 	color: black;
 	background-image: none;
+	background-color: $fc-white;
 	margin-top: 3em;
 }
 .big-letter{
