--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 @import 'variables/*.scss';
 @import url('https://fonts.googleapis.com/css?family=Norican&subset=latin-ext|Reem+Kufi|Lato:400,700,900|Titillium+Web:700,900');
 
-*{
+* {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
@@ -14,10 +14,11 @@
 
 // HEADER
 
-header{
+header {
 	width: 100%;
 	height: 900px;
-	.header__background{
+
+	.header__background {
 		background-image: url(/images/banner.png);
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -31,7 +32,7 @@ header{
 	}
 }
 
-.nav{
+.nav {
 	width: 100%;
 	height: 6.25rem;
 	display: flex;
@@ -41,20 +42,25 @@ header{
 	padding: 0 6.3rem;
 	position: absolute;
 	top: 0;
-	&__logo{
+
+	&__logo {
 		font-size: 60px;
 		letter-spacing: -4px;
-		.dot{
+
+		.dot {
 			color: #fba419;
 		}
 	}
-	&__item{
-		ul{
+
+	&__item {
+		ul {
 			display: flex;
-			li{
+
+			li {
 				list-style: none;
 				margin-right: 20px;
-				a{
+
+				a {
 					text-decoration: none;
 					color: $fc-white;
 					font-size: .9375rem;
@@ -65,40 +71,46 @@ header{
 	}
 }
 
-.container{
+.container {
 	width: 1170px;
 }
-.header{
-	.container-header{
+
+.header {
+	.container-header {
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
 	}
-	&__title{
+
+	&__title {
 		color: $fc-white;
 		font-size: 4.875rem;
 		text-align: center;
-		h1{
+
+		h1 {
 			font-family: $ff-title;
 		}
 	}
 
-	&__subtitle{
-		color:$fc-white;
+	&__subtitle {
+		color: $fc-white;
 		font-size: 1.612rem;
 		text-align: center;
 		margin-bottom: 50px;
 	}
-	&__description{
+
+	&__description {
 		color: $fc-white;
 		font-size: 1rem;
 		text-align: center;
 		width: 630px;
 	}
-	&__btn{
+
+	&__btn {
 		margin-top: 50px;
-		#btn-read-more{
+
+		#btn-read-more {
 			width: 8.75em;
 			height: 2.5em;
 			border-radius: 1rem;
@@ -113,7 +125,7 @@ header{
 }
 
 // CARDS BELOW HEADER
-.cards{
+.cards {
 	width: 100%;
 	height: 27.5em;
 	margin-bottom: -10.5em;
@@ -121,24 +133,28 @@ header{
 	justify-content: center;
 	align-items: center;
 	transform: translateY(-250px);
-	.container-cards{
+
+	.container-cards {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
 	}
-	&__item{
+
+	&__item {
 		height: 410px;
 		width: 370px;
 		border-radius: 1em;
 		background-color: $bcg-white;
 		overflow: hidden;
 		box-shadow: 0px 0px 20px 0px rgba(145, 145, 145, 0.7);
-		img{
+
+		img {
 			width: 100%;
 		}
 	}
-	&__text{
+
+	&__text {
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -148,18 +164,20 @@ header{
 		text-align: center;
 		color: $fc-gray;
 
-		h1{
+		h1 {
 			margin-top: -15px;
 			font-size: 1.5628rem;
 			margin-bottom: .7em;
 		}
-		p{
+
+		p {
 			font-size: 1rem;
 			margin-bottom: 1.3em;
 		}
 	}
 }
-.btn{
+
+.btn {
 	position: absolute;
 	bottom: 0;
 	width: 145px;
@@ -176,122 +194,264 @@ header{
 
 //ABOUT US
 
-.about-us{
+.about-us {
 	height: 720px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background-color: orange;
-	&__block{
+
+	&__block {
 		display: flex;
 		justify-content: space-between;
 		flex-direction: row;
 	}
-	&__item{
+
+	&__item {
 		width: 23.75em;
-		h1{
+
+		h1 {
 			font-family: $ff-title;
 			color: $fc-gray;
 			font-size: 3.125rem;
 		}
-		p{
+
+		p {
 			line-height: 1.7rem;
 			font-size: 1.125rem;
 		}
 	}
 }
-.btn--position{
+
+.btn--position {
 	position: static;
 	bottom: none;
 }
-.btn--white{
+
+.btn--white {
 	color: black;
 	background-image: none;
 	background-color: $fc-white;
 	margin-top: 3em;
 }
-.big-letter{
+
+.big-letter {
 	font-size: 35rem;
 	font-family: 'Reem Kufi', sans-serif;
 }
 
+// SERVICES
+
+.services{
+	width: 100%;
+	height: 935px;
+	// height: 635px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	&__block{
+		width: 100%;
+		background-color: $bcg-gray-light;
+		display: flex;
+		justify-content: center;
+		height: 635px;
+		z-index: 1;
+
+	}
+	&__item{
+		flex:1.4;
+		display: flex;
+		justify-content: flex-end;
+	}
+	&__img{
+		// flex: 1;
+		
+	}
+	.item__description{
+		margin-right: 230px;
+		width: 500px;
+		display: flex;
+		flex-direction: column;
+		// align-items: center;
+		justify-content: center;
+		h1{
+			font-family: $ff-title;
+			font-size: 3.125rem;
+			line-height: 1em;
+			margin-bottom: .7em;
+		}
+		p{
+			line-height: 1.7em;
+			font-weight: 300;
+			strong{
+				font-weight: 400;
+			}
+		}
+		// margin-right: 130px;
+	}
+	&__inset{
+		z-index: 100;
+		align-self: center;
+		display: flex;
+		transform: translateY(-530px);
+		width: 354px;
+		height: 475px;
+		background-color: red;
+	}
+	.btn--services{
+		margin-top: 30px;
+	}
+}
+
+
+// TEAM
+
+.team {
+	width: 100%;
+	height: 825px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+
+	&--container{
+		z-index: 100;
+	}
+	&__title {
+		margin-bottom: .5em;
+		h1 {
+			font-size: 3.125rem;
+			font-family: $ff-title;
+		}
+	}
+	&__description{
+		margin-bottom: 3em;
+		p{
+			font-weight: 300;
+		}
+	}
+
+	&__employees {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		.employe__card{
+			img{
+				margin-bottom: 2em;
+			}
+			h1{
+				font-size: 1.5625rem;
+				text-transform: capitalize;
+				font-weight: 400;
+			}
+			h2{
+				font-size: 1.25rem;
+				font-weight: 300;
+			}
+		}
+	}
+	&__shadow{
+		width: 1300px;
+		height: 320px;
+		background-color: $bcg-gray-light;
+		transform: translateY(-240px);
+		border-radius: .4em;
+		margin-bottom: -240px;
+	}
+}
+
 // MEMBER PAGE
 
-.member-page{
+.member-page {
 	width: 100%;
 	height: 730px;
 	display: flex;
 	flex-direction: row;
 	margin-bottom: 130px;
-	&__block:nth-child(1){
+
+	&__block:nth-child(1) {
 		flex: 1;
 		display: flex;
 		justify-content: flex-end;
 		align-items: center;
+
 		// background-color: red;
-		.member-page__item{
+		.member-page__item {
 			display: flex;
 			flex-direction: column;
 			padding: 0 50px 0 215px;
 			justify-content: flex-end;
 			align-items: center;
-			h1{
+
+			h1 {
 				font-family: $ff-title;
 				font-size: 4rem;
 				text-transform: capitalize;
 				text-align: left;
 			}
-			h2{
+
+			h2 {
 				text-align: left;
 				color: $fc-gray;
 				font-size: 1.375rem;
 				margin-bottom: 1em;
 				text-transform: capitalize;
 			}
-			p{
+
+			p {
 				font-weight: 300;
 				line-height: 1.7em;
 				margin-bottom: 2em;
 			}
-			.member-page__progress-bar{
+
+			.member-page__progress-bar {
 				display: flex;
 				flex-direction: column;
 				height: 100px;
-				.pair{
+
+				.pair {
 					display: flex;
 					justify-content: space-between;
 					line-height: 0px;
-					h2{
+
+					h2 {
 						font-weight: bold;
 
 					}
 				}
-				h2{
+
+				h2 {
 					margin-bottom: 5px;
 					font-weight: 400;
 				}
-				.progress-bar__item{
+
+				.progress-bar__item {
 					width: 480px;
 					height: 14px;
 					background-color: $bcg-gray;
 					border-radius: 1em;
 				}
-				.progress-bar--color{
+
+				.progress-bar--color {
 					width: 400px;
 					background-image: $vertical-gradient;
 				}
 			}
 		}
 	}
-	&__block:nth-child(2){
+
+	&__block:nth-child(2) {
 		flex: 1.3;
 		display: flex;
 		flex-direction: row;
+
 		// background-color: gray;
-		img{
+		img {
 			display: inline;
 		}
-		.member-page__item{
+
+		.member-page__item {
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
@@ -299,19 +459,23 @@ header{
 			background-image: $corner-gradient;
 			padding: 55px 45px;
 			color: $fc-white;
-			.item__header{
-				h2{
+
+			.item__header {
+				h2 {
 					font-size: 1.3125rem;
 					margin-bottom: .4em;
 				}
-				p{
+
+				p {
 					font-size: 1.125rem;
 					font-weight: 300;
 				}
 			}
-			.item__socials{
+
+			.item__socials {
 				display: flex;
-				.item__circle{
+
+				.item__circle {
 					width: 62px;
 					height: 62px;
 					border-radius: 50%;
@@ -320,7 +484,8 @@ header{
 					align-items: center;
 					background-color: $bcg-white;
 					margin-right: 1em;
-					i{
+
+					i {
 						color: $fc-gray;
 					}
 				}
@@ -331,18 +496,20 @@ header{
 
 
 //PRICE
-.price{
+.price {
 	width: 100%;
 	height: 790px;
 	display: flex;
 	flex-direction: row;
-	&__block:nth-child(1){
+
+	&__block:nth-child(1) {
 		flex-grow: 1;
 		background-image: $corner-gradient;
 		display: flex;
 		justify-content: flex-end;
-		align-items: center; 
-		.price__item{
+		align-items: center;
+
+		.price__item {
 			display: flex;
 			background-color: $bcg-white;
 			width: 385px;
@@ -351,43 +518,51 @@ header{
 			justify-content: center;
 			align-items: center;
 			padding: 0 3em;
-			h1{
+
+			h1 {
 				font-family: $ff-title;
 				font-size: 3.125rem;
 			}
-			h2{
+
+			h2 {
 				font-size: 1.25rem;
 				text-transform: capitalize;
 			}
-			.fixed--color{
+
+			.fixed--color {
 				color: $fc-gray;
 			}
-			h3{
+
+			h3 {
 				font-size: 6.6875rem;
 				background-image: $corner-gradient;
 				-webkit-background-clip: text;
 				-webkit-text-fill-color: transparent;
 				margin: 20px 0;
 			}
-			p{
+
+			p {
 				margin-top: .7em;
 				line-height: 1.6rem;
 				text-align: center;
 				font-weight: 300;
 			}
-			small{
+
+			small {
 				font-size: 4rem;
 			}
 		}
 	}
-	&__block:nth-child(2){
+
+	&__block:nth-child(2) {
 		flex-grow: 2;
 		background-image: $corner-gradient-gray;
 		display: flex;
 		// justify-content: space-evenly;
-		align-items: center; 
+		align-items: center;
 		flex-direction: row;
-		.price__item{
+
+		.price__item {
 			display: flex;
 			background-image: $corner-gradient;
 			width: 385px;
@@ -397,40 +572,48 @@ header{
 			justify-content: center;
 			align-items: center;
 			color: $fc-white;
-			h1{
+
+			h1 {
 				font-size: 3.5rem;
 				text-transform: capitalize;
 				font-family: $ff-bold;
 				font-weight: 900;
 				letter-spacing: -2px;
 			}
-			h2{
+
+			h2 {
 				font-weight: 400;
 				margin-bottom: 20px;
 			}
-			ul{
+
+			ul {
 				list-style: none;
-				li{
+
+				li {
 					margin-bottom: 20px;
 				}
 			}
-			.icon--list{
+
+			.icon--list {
 				margin-right: 15px;
 			}
 		}
-		.price__about{
+
+		.price__about {
 			display: flex;
 			flex-direction: column;
 			width: 490px;
 			margin-left: auto;
 			margin-right: auto;
-			h1{
+
+			h1 {
 				font-size: 3rem;
 				font-family: $ff-title;
 				line-height: 3rem;
 				text-align: left;
 			}
-			p{
+
+			p {
 				line-height: 1.7rem;
 				font-size: 1.125rem;
 			}
@@ -441,7 +624,7 @@ header{
 
 //SOCIAL MEDIA
 
-.social-media{
+.social-media {
 	width: 100%;
 	height: 471px;
 	background-image: url(/images/social-media-bg.png);
@@ -453,26 +636,30 @@ header{
 	justify-content: center;
 	align-items: center;
 	margin-top: -42px;
-	&__block{
+
+	&__block {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-evenly;
 		align-items: center;
 		height: 330px;
-		h1{
+
+		h1 {
 			font-family: $ff-title;
 			font-size: 3.125rem;
 			color: $fc-white;
 		}
 	}
-	&__list{
+
+	&__list {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
 		width: 830px;
 	}
-	.list__circe{
+
+	.list__circe {
 		border: 3px solid $fc-white;
 		width: 5em;
 		height: 5em;
@@ -480,48 +667,56 @@ header{
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		.icon--white{
+
+		.icon--white {
 			color: $fc-white;
 		}
 	}
 }
 
 // FOOTER
- footer{
-	 width: 100%;
-	 height: 300px;
-	 display: flex;
-	 justify-content: center;
-	 align-items: center;
-	 .footer__block{
-		 display: flex;
-		 flex-direction: row;
-		 justify-content: space-around;
-		 align-items: center;
-	 }
-	 .footer__item{
-		 display: flex;
-		 justify-content: center;
-		 align-items: center;
-		 .color-icon{
-			 color: $c-orange;
-		 }
-		 .item__svg{
-			 padding: 0 2em;
-		 }
-	 }
-	 .item__description{
-		 color: $fc-gray;
-		 top: 0;
-		 h1{
-			 text-transform: uppercase;
-			 font-size: 1.0625rem;
-			 font-weight: bold;
-			 margin-bottom: .5em;
-		 }
-		 p{
-			 font-size: 1rem;
-			 font-weight: 400;
-		 }
-	 }
- }
+footer {
+	width: 100%;
+	height: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.footer__block {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+	}
+
+	.footer__item {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		.color-icon {
+			color: $c-orange;
+		}
+
+		.item__svg {
+			padding: 0 2em;
+		}
+	}
+
+	.item__description {
+		color: $fc-gray;
+		top: 0;
+
+		h1 {
+			text-transform: uppercase;
+			font-size: 1.0625rem;
+			font-weight: bold;
+			margin-bottom: .5em;
+		}
+
+		p {
+			font-size: 1rem;
+			font-weight: 400;
+		}
+	}
+}
