--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -14,6 +14,7 @@ $ff-bold: 'Titillium Web', sans-serif;
 //BACKGROUND
 $bcg-white: hsla(0, 0%, 100%, 100%);
 $bcg-gray: #d9d9d9;
+$bcg-gray-light: #f4f4f4;
 
 //COLOR
 $c-orange: #fc9e20;
@@ -22,4 +23,4 @@ $c-blue: #415299;
 //GRADIENT
 $vertical-gradient: linear-gradient(to right, #dd813d, #415299);
 $corner-gradient: linear-gradient(135deg, #dd813d, #415299);
-$corner-gradient-gray: linear-gradient(135deg, #d9d9d9, #fff);
+$corner-gradient-gray: linear-gradient(135deg, #f4f4f4, #fff);
