--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -15,7 +15,7 @@ $ff-bold: 'Titillium Web', sans-serif;
 $bcg-white: hsla(0, 0%, 100%, 100%);
 $bcg-gray: #d9d9d9;
 $bcg-gray-light: #f4f4f4;
-$bcg-gray-light2: rgba(244, 244, 244, 0.212);
+$bcg-gray-light2: hsla(0, 0%, 56.9%, 70%);
 
 //COLOR
 $c-orange: #fc9e20;
