--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -332,18 +332,18 @@ header {
 	}
 
 	&__item {
-		flex: 1.4;
+		flex: 1.2;
 		display: flex;
 		justify-content: flex-end;
 	}
 
 	&__img {
-		// flex: 1;
+		flex: 1;
 
 	}
 
 	.item__description {
-		margin-right: 230px;
+		margin-right: 14%;
 		width: 500px;
 		display: flex;
 		flex-direction: column;
@@ -508,10 +508,10 @@ header {
 		.member-page__item {
 			display: flex;
 			flex-direction: column;
-			padding: 0 50px 0 215px;
+			margin: 0 60px;
 			justify-content: flex-end;
 			align-items: center;
-
+			max-width: 480px;
 			h1 {
 				font-family: $ff-title;
 				font-size: 4rem;
@@ -570,7 +570,7 @@ header {
 	}
 
 	&__block:nth-child(2) {
-		flex: 1.3;
+		flex: 1.1;
 		display: flex;
 		flex-direction: row;
 
@@ -587,7 +587,7 @@ header {
 			background-image: $corner-gradient;
 			padding: 55px 45px;
 			color: $fc-white;
-
+			width: 100%;
 			.item__header {
 				h2 {
 					font-size: 1.3125rem;
@@ -683,7 +683,7 @@ header {
 	}
 
 	&__block:nth-child(2) {
-		flex-grow: 2;
+		flex-grow: 1.1;
 		background-image: $corner-gradient-gray;
 		display: flex;
 		// justify-content: space-evenly;
@@ -700,7 +700,7 @@ header {
 			justify-content: center;
 			align-items: center;
 			color: $fc-white;
-
+			margin-right: 70px;
 			h1 {
 				font-size: 3.5rem;
 				text-transform: capitalize;
@@ -731,9 +731,6 @@ header {
 			display: flex;
 			flex-direction: column;
 			width: 490px;
-			margin-left: auto;
-			margin-right: auto;
-
 			h1 {
 				font-size: 3rem;
 				font-family: $ff-title;
