--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,12 +15,18 @@
 .hamburger-menu {
   width: 100%;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 1);
   position: absolute;
   z-index: 10000;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  .fa-times {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+  }
   ul {
     list-style-type: none;
     li {
@@ -32,7 +38,7 @@
         text-decoration: none;
         color: $fc-gray;
         &:hover {
-          color: red;
+          color: $c-orange;
         }
       }
     }
@@ -72,7 +78,9 @@ header {
   padding: 0 6.3rem;
   position: absolute;
   top: 0;
-
+  @media screen and (max-width: 1050px) {
+    padding: 0 2.3rem;
+  }
   &__logo {
     font-size: 60px;
     letter-spacing: -4px;
@@ -108,10 +116,12 @@ header {
     cursor: pointer;
     z-index: 10000;
     @media screen and (max-width: 1050px) {
-      // position: absolute;
       display: block;
     }
   }
+}
+.hamburger-display-none {
+  display: none !important;
 }
 
 .container {
@@ -124,6 +134,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
   }
 
   &__title {
@@ -148,7 +159,8 @@ header {
     color: $fc-white;
     @include fp(font-size, 12, 16);
     text-align: center;
-    width: 630px;
+    max-width: 630px;
+    width: 100%;
     p {
       @media screen and (max-width: 800px) {
         margin: auto;
@@ -191,9 +203,11 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
     @media screen and(max-width: 1230px) {
       justify-content: center;
       flex-direction: column;
+      width: 100%;
     }
   }
 
@@ -218,6 +232,9 @@ header {
       max-height: 222px;
       object-fit: cover;
       object-position: 50% 30%;
+      @media screen and(max-width:480px) {
+        width: auto;
+      }
     }
   }
 
@@ -231,6 +248,9 @@ header {
     text-align: center;
     color: $fc-gray;
     // z-index: 1000;
+    @media screen and(max-width:480px) {
+      padding: 0 1em;
+    }
     h1 {
       margin-top: -15px;
       font-size: 1.5628rem;
@@ -277,6 +297,7 @@ header {
     min-height: 720px;
     @media screen and(max-width: 1250px) {
       margin-top: 30px;
+      width: 100%;
     }
   }
 
@@ -339,6 +360,9 @@ header {
       @media screen and(max-width: 1250px) {
         height: 550px;
         margin-top: -120px;
+      }
+      @media screen and(max-width:360px) {
+        font-size: 450px;
       }
     }
   }
@@ -429,13 +453,21 @@ header {
 
 .services {
   width: 100%;
-  height: 935px;
+  min-height: 935px;
   // height: 635px;
   margin-top: -200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  @media screen and(max-width: 1400px) {
+    min-height: 1400px;
+  }
+  @media screen and(max-width: 1100px) {
+    background-color: $bcg-gray-light;
+    min-height: 1000px;
+    margin-top: 0;
+    padding: 60px 0;
+  }
   &__block {
     width: 100%;
     background-color: $bcg-gray-light;
@@ -443,16 +475,38 @@ header {
     justify-content: center;
     min-height: 635px;
     z-index: 1;
+    @media screen and(max-width: 1400px) {
+      flex-direction: column;
+      padding: 50px 0;
+    }
+    @media screen and(max-width: 1100px) {
+      flex-direction: column;
+      min-height: 335px;
+      padding: 0 0 50px 0;
+    }
   }
 
   &__item {
     flex: 1.35;
     display: flex;
     justify-content: flex-end;
+    @media screen and(max-width: 1400px) {
+      flex: 1;
+      justify-content: center;
+    }
   }
 
   &__img {
     flex: 1;
+    @media screen and(max-width: 1400px) {
+      display: flex;
+      justify-content: center;
+      margin-top: 50px;
+      width: 80%;
+    }
+    @media screen and(max-width: 1100px) {
+      display: none;
+    }
   }
 
   .item__description {
@@ -462,7 +516,11 @@ header {
     flex-direction: column;
     // align-items: center;
     justify-content: center;
-
+    @media screen and(max-width: 1400px) {
+      // padding: 0 50px;
+      margin-right: 0;
+      width: 80%;
+    }
     h1 {
       font-family: $ff-title;
       font-size: 3.125rem;
@@ -495,7 +553,19 @@ header {
     border-radius: 1em;
     padding: 20px;
     margin-bottom: -730px;
-
+    @media screen and(max-width: 1400px) {
+      transform: translate(170px, -600px);
+    }
+    @media screen and(max-width: 1100px) {
+      transform: none;
+      margin-bottom: 0;
+      width: 80%;
+    }
+    @media screen and(max-width: 450px) {
+      max-width: 354px;
+      width: 100%;
+      margin: 0 40px;
+    }
     .fixed-border {
       border-bottom: 1px dotted $bcg-gray-light2;
       border-left: 1px dotted $bcg-gray-light2;
@@ -539,15 +609,23 @@ header {
 
 .team {
   width: 100%;
-  height: 685px;
+  min-height: 685px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
   margin-bottom: 30px;
+  @media screen and(max-width: 1250px) {
+    padding: 50px 0;
+  }
   &--container {
     z-index: 100;
+    @media screen and(max-width: 1250px) {
+      max-width: 1170px;
+      width: auto;
+    }
   }
 
   &__title {
@@ -565,6 +643,11 @@ header {
     p {
       font-weight: 300;
       line-height: 1.6em;
+      @media screen and(max-width: 1250px) {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
   }
 
@@ -572,8 +655,14 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    @media screen and(max-width: 1250px) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
     .employe__card {
+      @media screen and(max-width: 1250px) {
+        padding: 10px;
+      }
       img {
         margin-bottom: 2em;
       }
@@ -598,6 +687,9 @@ header {
     transform: translateY(-240px);
     border-radius: 0.4em;
     margin-bottom: -240px;
+    @media screen and(max-width: 1250px) {
+      display: none;
+    }
   }
 }
 
@@ -633,9 +725,13 @@ header {
       justify-content: flex-end;
       align-items: center;
       max-width: 480px;
+      width: 100%;
+      @media screen and(max-width:650px) {
+        padding: 0 30px;
+      }
       h1 {
         font-family: $ff-title;
-        font-size: 4rem;
+        @include fp(font-size, 48, 64);
         text-transform: capitalize;
         text-align: left;
       }
@@ -643,7 +739,7 @@ header {
       h2 {
         text-align: left;
         color: $fc-gray;
-        font-size: 1.375rem;
+        @include fp(font-size, 18, 22);
         margin-bottom: 1em;
         text-transform: capitalize;
       }
@@ -652,12 +748,14 @@ header {
         font-weight: 300;
         line-height: 1.7em;
         margin-bottom: 2em;
+        @include fp(font-size, 14, 16);
       }
 
       .member-page__progress-bar {
         display: flex;
         flex-direction: column;
         height: 100px;
+        width: 100%;
 
         .pair {
           display: flex;
@@ -675,15 +773,19 @@ header {
         }
 
         .progress-bar__item {
-          width: 480px;
+          max-width: 480px;
           height: 14px;
           background-color: $bcg-gray;
           border-radius: 1em;
         }
 
         .progress-bar--color {
+          max-width: 400px;
           width: 400px;
           background-image: $vertical-gradient;
+          @media screen and(max-width:650px) {
+            // width: 80%;
+          }
         }
       }
     }
@@ -696,13 +798,14 @@ header {
     @media screen and(max-width:900px) {
       flex-wrap: wrap;
       justify-content: center;
+      width: 100%;
     }
     // background-color: gray;
     img {
       display: inline;
       @media screen and(max-width:900px) {
-		max-width:100%;
-		height:auto;
+        max-width: 100%;
+        height: auto;
       }
     }
 
@@ -785,6 +888,9 @@ header {
       margin-left: 30px;
       @media screen and(max-width:846px) {
         margin-left: 0;
+      }
+      @media screen and(max-width:400px) {
+        width: 100%;
       }
       h1 {
         font-family: $ff-title;
@@ -925,6 +1031,9 @@ header {
     display: flex;
     align-content: center;
     align-items: center;
+    @media screen and(max-width:350px) {
+      min-height: 790px;
+    }
     @media screen and(max-width:1377px) {
       height: 690px;
       justify-content: center;
@@ -935,6 +1044,12 @@ header {
       flex-direction: column;
       width: 490px;
       padding: 0 40px;
+      @media screen and(max-width:1377px) {
+        width: 80%;
+      }
+      @media screen and(max-width:1377px) {
+        padding: 0;
+      }
       h1 {
         @include fp(font-size, 36, 48);
         font-family: $ff-title;
@@ -963,6 +1078,9 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  .container {
+    width: 100%;
+  }
   @media screen and(max-width: 850px) {
     height: 650px;
   }
@@ -980,6 +1098,7 @@ header {
     justify-content: space-evenly;
     align-items: center;
     height: 330px;
+    width: 100%;
     @media screen and(max-width: 850px) {
       height: 700px;
     }
@@ -995,7 +1114,8 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 830px;
+    max-width: 830px;
+    width: 100%;
     // flex-wrap: wrap;
     .circle-pair {
       display: flex;
@@ -1048,6 +1168,9 @@ footer {
   justify-content: center;
   align-items: center;
   margin: 50px 0;
+  .container {
+    width: 100%;
+  }
   .footer__block {
     display: flex;
     flex-direction: row;
@@ -1055,6 +1178,9 @@ footer {
     align-items: center;
     @media screen and (max-width: 950px) {
       flex-direction: column;
+    }
+    @media screen and(max-width:350px) {
+      width: 100%;
     }
   }
 
