--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -165,6 +165,7 @@ header {
       @media screen and (max-width: 800px) {
         margin: auto;
         max-width: 450px;
+        width: 80%;
       }
     }
   }
